<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/taxiii200px"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:contentDescription="@string/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_description"
            android:textColor="@color/design_default_color_primary"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:layout_margin="20dp">

            <Button
                android:id="@+id/btn_ImDriver"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_buttom"
                android:backgroundTint="#536DFE"
                android:textColor="@color/colorWhite"
                android:layout_marginEnd="5dp"
                android:text="@string/str_driver"/>

            <Button
                android:id="@+id/btn_ImCliente"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_buttom"
                android:backgroundTint="#23FCC3"
                android:textColor="@color/colorWhite"
                android:layout_marginStart="5dp"
                android:layout_height="wrap_content"
                android:text="@string/str_cliente"/>
        </LinearLayout>
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>