<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"

    tools:context=".activities.SelectOptionAuthActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/taxiii200px"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:contentDescription="@string/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_ses"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <!--Correo electrónico-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/icon_user"
                    android:contentDescription="@string/user_image" />
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_InputEmailLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/str_email"
                        android:inputType="textEmailAddress"
                        android:textColorHint="@color/colorLightPrimary"
                        android:layout_margin="5dp">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <!--Contraseña-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/icon_passw"
                    android:contentDescription="@string/passw_logo" />
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_InputPasswLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/str_passw"
                        android:inputType="textPassword"
                        android:textColorHint="@color/colorLightPrimary"
                        android:layout_margin="5dp" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>


            <Button
                android:id="@+id/btn_IniciarSesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_buttom"
                android:backgroundTint="#536DFE"
                android:textColor="@color/colorWhite"
                android:layout_margin="5dp"
                android:text="@string/iniciar_ses"/>
            <!--Registrar-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_Register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_buttom"
                    android:backgroundTint="#44DDD8"
                    android:textColor="@color/colorWhite"
                    android:layout_margin="5dp"
                    android:text="@string/str_registrar"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>